--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "chart.js": "^4.5.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "firebase": "^11.10.0",
     "lucide-react": "^0.525.0",
     "next": "15.4.1",
