--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^11.10.0",
     "lucide-react": "^0.525.0",
     "next": "15.4.1",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
